cmake_minimum_required(VERSION 3.15)
project(b VERSION 1.0.0)

set(gcc_like_cxx "$<COMPILE_LANG_AND_ID:CXX,ARMClang,AppleClang,Clang,GNU,LCC>")
set(DEBUG_BUILD "$<CONFIG:Debug>")
set(CMAKE_CXX_STANDARD 20)
add_compile_options(-m32)
add_link_options(-m32)

if(gcc_like_cxx)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
add_compile_options(-fdata-sections -ffunction-sections)
add_link_options(-Wl,--gc-sections)
endif()

add_subdirectory(src)
add_subdirectory(thirdparty/googletest)
add_subdirectory(thirdparty/nlohmann)
add_subdirectory(thirdparty/SPTLib)
add_subdirectory(tools)

enable_testing()
add_subdirectory(test/bdemo_tests)
add_subdirectory(test/plugin_tests)
add_subdirectory(test/sptlib_tests)
